# AI-Infrastructure-Platform-for-Distributed-Model-Serving

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-serving.txt  requirements.txt
.github/: pull_request_template.md  repository-metadata.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
audit_logs/: REMEDIATION_POINTER.md
audit_scripts/: phase1_static.py  phase4_6_7.py  run_audit.py  smoke_tests.py
benchmarks/: run_benchmark.py
benchmarks/results/: smollm3_bench_20260629_192536.json  smollm3_bench_20260629_192536.md
ci/: .github_workflows_main.yml
configs/: gateway.yaml  scheduler.yaml  training.yaml
cpp/: CMakeLists.txt
cpp/include/predictor/: feature_extractor.hpp  inference_engine.hpp
cpp/include/scheduler/: priority_queue.hpp
cpp/src/: feature_extractor.cpp  inference_engine.cpp  main.cpp  priority_queue.cpp
cpp/tests/: test_scheduler.cpp
docker/: Dockerfile  Dockerfile.gateway  Dockerfile.ml  Dockerfile.scheduler  docker-compose.scheduler.yml  docker-compose.yml
docs/: GPU_SETUP.md  PRODUCTION_CERTIFICATION.md  PRODUCTION_CERTIFICATION_REPORT.md  RELEASE_v1.0.0.md  REMEDIATION_REPORT.md  api.md  architecture.md  architecture_analysis.md  benchmark.md  deployment.md
docs/reports/: evaluation_report.html  evaluation_report.md
go/: go.mod
go/proto/: predictor.proto  scheduler.proto
k8s/: manifests.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
monitoring/: prometheus.yml
python/benchmark/: compare.py  fcfs.py  metrics.py  plots.py  sjf.py
python/configs/: scheduler.yaml  training.yaml
python/evaluation/: generate_report.py
python/predictor/: __init__.py  dataset.py  export.py  feature_extractor.py  features.py  inference.py  model.py  predictor.py  trainer.py
python/scheduler/: __init__.py  aging.py  (+5 more)
scripts/: benchmark.sh  ci.sh  export.sh  generate_benchmark_report.py  patch_init.py  patch_registry.py  setup_venv.ps1  train.sh
tests/: conftest.py  test_certification.py  test_dataset_io.py  test_features.py  test_features_vector.py  test_gateway.py  test_inference.py  test_integration.py  test_predictor.py  test_scheduler.py  test_scheduler_extended.py  test_smollm3.py  test_stress.py  test_training.py
vllm_port/: registry_patch.py  smollm3.py
(+15 files in other folders)
